[gd_scene load_steps=6 format=3 uid="uid://be3baasxn2i2j"]

[ext_resource type="Texture2D" uid="uid://bja0wl8tcw71c" path="res://art/backgrounds/background_01.png" id="1_4g0ko"]
[ext_resource type="Script" path="res://levels/menu/menu.gd" id="1_ea57w"]
[ext_resource type="Texture2D" uid="uid://bujx43rcy5b85" path="res://art/backgrounds/background_02.png" id="2_62tsq"]
[ext_resource type="PackedScene" uid="uid://oq6ok0ner4t" path="res://levels/level_01/level_01.tscn" id="2_dh7yu"]

[sub_resource type="LabelSettings" id="LabelSettings_oneio"]
font_size = 64
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Node" node_paths=PackedStringArray("level_container", "ip_line_edit", "status_label")]
script = ExtResource("1_ea57w")
level_container = NodePath("Level")
level_scene = ExtResource("2_dh7yu")
ip_line_edit = NodePath("UI/NotConnectedHBox/IPLineEdit")
status_label = NodePath("UI/Status")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://levels/level_01/level_01.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTrees" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4g0ko")
expand_mode = 2
stretch_mode = 4

[node name="BackgroundHouses" type="TextureRect" parent="UI/BackgroundTrees"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_62tsq")
expand_mode = 2
stretch_mode = 4

[node name="NotConnectedHBox" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 720.0
offset_bottom = 62.0

[node name="HostButton" type="Button" parent="UI/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host
"

[node name="JoinButton" type="Button" parent="UI/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="IPLineEdit" type="LineEdit" parent="UI/NotConnectedHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Enter IP Address"

[node name="HostHBox" type="HBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 315.0
offset_bottom = 62.0

[node name="StartButton" type="Button" parent="UI/HostHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Status" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Connecting"
label_settings = SubResource("LabelSettings_oneio")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/NotConnectedHBox/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/NotConnectedHBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/HostHBox/StartButton" to="." method="_on_start_button_pressed"]
